Changed and fixed fil generation and a few simulation errors